2015-08-31  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-293

	* src/m_atmosphere.cc (AtmosphereSet3D): The method now also sets
	lat_true and lon_true, to be empty. This matches how the 1D method
	sets lat_grid and lon_grid to be empty.

	* src/jacobian.cc (get_pointers_for_analytical_jacobians):
	* src/m_transmitter.cc (iyTransmissionStandard):
	* src/m_rte.cc (iyEmissionStandard): Continued work magnetic field
	as jacobian quantity. Should be finished but no proper testing yet.

2015-08-28  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-292

	* controlfiles/instruments/metmm/sensor_descriptions/sensor_ismar.arts:
	The bandwidth for 664 GHz was incorrectly set to 3 GHz, now
	corrected to 5 GHz. Error found by Stuart.

	The below is work in progress, to add magnetic field as jacobian quantity.

	* src/m_transmitter.cc (iyTransmissionStandard): Just adopted to
	get_pointers_for_analytical_jacobians.

	* src/jacobian.cc (get_pointers_for_analytical_jacobians): Added
	support for mag. fields.

	* src/m_jacobian.cc (jacobianAddMagField): New.
	(jacobianAddWind): Corrected an error message.
	(jacobianCalcMagFieldAnalytical): New.

	* src/constants.cc: Added MAGFIELD_MAINTAG.

2015-08-27  Patrick Eriksson  <patrick.eriksson@chalmers.se>

	* arts-2-3-291

	* src/m_abs.cc (abs_linesReadFromHitran): A small correction of
	error message, added 1 to the line
        << "run 'cmake -DWITH_HITRAN2008=1 ..' and recompile arts";

	* A change to make things more flexible in the met mm part.
	freq_number is now set in the instrument file. It was before
	hard-coded to 1 GHz in apply_metmm.arts.

	* controlfiles/instruments/metmm/sensor_descriptions/apply_metmm.arts:
	See above.

	* controlfiles/instruments/metmm/sensor_descriptions/sensor_ismar.arts:
	* controlfiles/instruments/metmm/sensor_descriptions/sensor_deimos.arts:
	* controlfiles/instruments/metmm/sensor_descriptions/sensor_marss.arts: